--- a/app/home/welcome.component.html
+++ b/app/home/welcome.component.html
@@ -4,17 +4,20 @@
     </div>
     <div class="panel-body"  >
         <div class="row" >
-            <img src="./app/assets/images/logo.jpg" 
-                 class="img-responsive center-block"
-                 style="max-height:300px;padding-bottom:50px"/>
+            <figure class="figure">
+                <img src="./app/assets/images/angular2.png"
+                     class="img-responsive center-block"
+                     style="max-height:300px;padding-bottom:50px"/>
+                <!--<figcaption class="center-block">Develop Across All Platforms</figcaption>-->
+            </figure>
         </div>
         <div class="row"  >
             <div class="text-center">Developed by:</div>
-            <h3 class="text-center">Deborah Kurata</h3>
+            <h3 class="text-center">Glenn Antoine</h3>
 
-            <div class="text-center">@deborahkurata</div>
+            <div class="text-center">@glennantoine</div>
             <div class="text-center">
-                <a href="http://www.bit.ly/DeborahKsBlog">www.bit.ly/DeborahKsBlog</a>
+                <a href="http://glennantoine.com">GlennAntoine.com</a>
             </div>
         </div>
     </div>
