--- a/app/products/product-detail.component.html
+++ b/app/products/product-detail.component.html
@@ -2,4 +2,13 @@
     <div class="panel-heading">
         {{ pageTitle }}
     </div>
+    <div class="panel-body">
+        Details here
+    </div>
+
+    <div class="panel-footer">
+        <a class="btn btn-default" (click)="onBack()" style="width: 89px">
+            <i class="glyphicon glyphicon-chevron-left"></i>Back
+        </a>
+    </div>
 </div>
